fix: ! better alignment of address lines

--- a/src/components/website/mapApp/DeviceList.scss
+++ b/src/components/website/mapApp/DeviceList.scss
@@ -33,7 +33,9 @@
     .devices-address {
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: flex-start;
+      align-items: flex-start;
+      gap: 8px;
 
       p {
         font-size: 20px;
